# mapping-hte-sectors

./: Aviationcostbreakdown.csv  LICENSE.md  README.md  calc_hmdata.py  export_figs.py  h2LCOkerosene.csv  keroseneLCO_only.csv  pyproject.toml
src/calc/: calc_costs.py  params.json  tech_class.py
src/plot/: basicplots.py  common.py  hm.py  hm_retrofit.py
tools/: process_tech_df.py
